[package]
name = "email_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
lettre = "0.11.6"
ring = "0.17.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = {version = "0.5.2", features = ["cors"]}
axum-server = {version = "0.6", features = ["tls-rustls"]}
oauth2 = "4.0"
reqwest = "0.12.4"
hex = "0.4.3"
chrono = "0.4.37"